5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4058/executions/1621_2920.log
== TEST (2019-04-01 18:38:24) 
-- CODE:
gramas=input(float("quantas gramas possui nomeu prato?"))
bebibas=input(int("quanto voce tomou?"))
sobremesa=input(int("quantas sobremesas voce comeu?"))
comida=0.5
suco=2
sob=1
print(gramas*comida, bebidas*suco, sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    gramas=input(float("quantas gramas possui nomeu prato?"))
ValueError: could not convert string to float: 'quantas gramas possui nomeu prato?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:38:48) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input(int("quanto voce tomou?"))
sobremesa=input(int("quantas sobremesas voce comeu?"))
comida=0.5
suco=2
sob=1
print(gramas*comida, bebidas*suco, sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    bebibas=input(int("quanto voce tomou?"))
ValueError: invalid literal for int() with base 10: 'quanto voce tomou?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:10) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=0.5
suco=2
sob=1
print(gramas*comida, bebidas*suco, sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(gramas*comida, bebidas*suco, sobremesa*sob)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:39:49) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(gramas*comida, bebidas*suco, sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(gramas*comida, bebidas*suco, sobremesa*sob)
TypeError: can't multiply sequence by non-int of type 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:40:38) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(gramas*comida)
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(gramas*comida)
TypeError: can't multiply sequence by non-int of type 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:15) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(round(gramas*comida, 2))
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(gramas*comida, 2))
TypeError: can't multiply sequence by non-int of type 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:41:53) 
-- CODE:
gramas=input(float("quantas gramas possui no seu prato?"))
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(round(gramas*comida, 2))
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    gramas=input(float("quantas gramas possui no seu prato?"))
ValueError: could not convert string to float: 'quantas gramas possui no seu prato?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:03) 
-- CODE:
gramas=inputfloat(("quantas gramas possui no seu prato?"))
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(round(gramas*comida, 2))
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    gramas=inputfloat(("quantas gramas possui no seu prato?"))
NameError: name 'inputfloat' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:19) 
-- CODE:
gramas=input(int("quantas gramas possui no seu prato?"))
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(round(gramas*comida, 2))
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    gramas=input(int("quantas gramas possui no seu prato?"))
ValueError: invalid literal for int() with base 10: 'quantas gramas possui no seu prato?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:33) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(round(gramas*comida, 2))
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(gramas*comida, 2))
TypeError: can't multiply sequence by non-int of type 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:42:55) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(float(round(gramas*comida, 2)))
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(float(round(gramas*comida, 2)))
TypeError: can't multiply sequence by non-int of type 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:25) 
-- CODE:
gramas=input("quantas gramas possui no seu prato?")
bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")
comida=26,90
suco=3,50
sob=3
print(int(round(gramas*comida, 2)))
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(round(gramas*comida, 2)))
TypeError: can't multiply sequence by non-int of type 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:43:51) 
-- CODE:

bebibas=input("quanto voce tomou?")
sobremesa=input("quantas sobremesas voce comeu?")

suco=3,50
sob=3
print(bebidas*suco)
print(sobremesa*sob)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(bebidas*suco)
NameError: name 'bebidas' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:23) 
-- CODE:
sel=float(26.90)
suc=float(3.50)
sob=(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g+suc*s+sob*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sel*g+suc*s+sob*l)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:55) 
-- CODE:
sel=int(26.90)
suc=int((3.50)
sob=(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g+suc*s+sob*l)
-- ERROR:
File "XXXX", line 3
    sob=(3)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:48:57) 
-- CODE:
sel=int(26.90)
suc=int((3.50)
sob=(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g+suc*s+sob*l)
-- ERROR:
File "XXXX", line 3
    sob=(3)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:04) 
-- CODE:
sel=int(26.90)
suc=int((3.50)
sob=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g+suc*s+sob*l)
-- ERROR:
File "XXXX", line 3
    sob=int(3)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:15) 
-- CODE:
sel=int(26.90)
suc=int((3.50)
sob=3
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g+suc*s+sob*l)
-- ERROR:
File "XXXX", line 3
    sob=3
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:36) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g+suc*s+sob*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sel*g+suc*s+sob*l)
NameError: name 'sob' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:49:57) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g+suc*s+sobremesa*l)
-- OUTPUT:
896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12896.12000000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:31) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(round(sel*g+suc*s+sobremesa*l, 2)
-- ERROR:
File "XXXX", line 9
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:43) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(round(sel*g+suc*s+sobremesa*l, 2)
-- ERROR:
File "XXXX", line 9
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:50:52) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(round(sel*g+suc*s+sobremesa*l, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(sel*g+suc*s+sobremesa*l, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:26) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(round(sel*g, 2)+(suc*s)+(sobremesa*l)
-- ERROR:
File "XXXX", line 9
    
                                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:51:45) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(round(sel*g, 2))+(suc*s)+(sobremesa*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(sel*g, 2))+(suc*s)+(sobremesa*l)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:52:34) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(round(sel*g, 2))+(suc*s)+(sobremesa*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(sel*g, 2))+(suc*s)+(sobremesa*l)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:01) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(round(sel*g, 2))+(suc*s)+(sobremesa*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(sel*g, 2))+(suc*s)+(sobremesa*l)
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:16) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g, 2)+(suc*s)+(sobremesa*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sel*g, 2)+(suc*s)+(sobremesa*l)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:37) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g, 2)+(suc*s)+(sobremesa*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sel*g, 2)+(suc*s)+(sobremesa*l)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 18:54:46) 
-- CODE:
sel=int(26.90)
suc=int(3.50)
sobremesa=int(3)
g=input("quantas gramas possui no seu prato?")
s=input("quantos sucos voce tomou?")
l=input("quantas sobremesas voce comeu?")

print(sel*g)+(suc*s)+(sobremesa*l)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(sel*g)+(suc*s)+(sobremesa*l)
TypeError: unsupported operand type(s) for +: 'NoneType' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
